[package]
name = "cfdkim"
version = "0.3.0"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
edition = "2021"
description = "DKIM (RFC6376) implementation"
repository = "https://github.com/cloudflare/dkim"
documentation = "https://docs.rs/cfdkim"
categories = ["email"]
keywords = ["email", "dkim", "authentification"]
readme = "README.md"
license = "MIT"

[dependencies]
ed25519-dalek = "2"
mailparse = "0.15"
quick-error = "2.0.1"
nom = "7.1.0"
chrono = { version = "0.4.19", default-features = false, features = [
    "clock",
    "std",
] }
futures = "0.3.18"
sha-1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.21.0"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
slog = "2.7.0"
indexmap = "1.8.0"


[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
# rayon = "1.5"
# wasm-bindgen-rayon = { version = "1.0" }
# web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
# wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# reqwasm = { version = "0.5.0", git = "https://github.com/SoraSuegami/reqwasm.git", branch = "master" }
regex = "1.9.6"
base64 = "0.21.4"
serde_json = "1.0.93"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
trust-dns-resolver = "0.22"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { version = "1.20", features = ["macros"] }
regex = "1"
